manifests/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rtf-ingress
  namespace: rtf
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: student<XX>
    kubernetes.io/ingress.class: rtf-alb
spec:
  rules:
  - host: "*.mulesoft-training.com"
    http:
      paths:
      - pathType: Prefix
        path: "/*"
        backend:
          service:
            name: app
            port:
              number: 80
